--- a/apps/communications/contacts/style/app.css
+++ b/apps/communications/contacts/style/app.css
@@ -263,17 +263,13 @@ li a[role="button"].activity > b em{
   font-style: normal;
 }
 
-[data-type="list"] li p {
-  margin-left: 1.5rem;
-}
-
 /* Long strings (email) */
 li button.activity > b ,
 li a[role="button"].activity > b{
   font-weight: normal;
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  white-space: nowrap;;
   display: block;
   position: absolute;
   left: 3rem;
@@ -283,16 +279,8 @@ li a[role="button"].activity > b{
 }
 
 /* BB Lists extending */
-#view-contacts-list [data-type="list"] {
-  padding: 2.5rem 2.5rem 0 1.5rem;
-}
-
 [data-type="list"] header {
-  padding: 0 0 0 1.5rem;
-}
-
-[data-type="list"].active li:after {
-  right: 0;
+  margin-left: -1rem;
 }
 
 /* JS helper */
@@ -300,6 +288,8 @@ li a[role="button"].activity > b{
 [data-type="list"] li aside {
   pointer-events: none;
 }
+
+
 
 /* Selection tag extended from shared/style/buttons.css */
 .view-select-tag .selection-list li button {
@@ -342,16 +332,15 @@ form p + p {
   z-index: 5;
   width: 100%;
   -moz-box-sizing: border-box;
-  padding: 1.5rem;
-  background: #fff;
+  padding: 1.4rem 2rem;
+  background: #f4f4f4;
   color: #333;
   text-align: left;
-  will-animate: scroll;
 }
 
 /* Removes scroll from the view body inner */
 .view-noscroll .view-body-inner {
-  width: -moz-calc(100% + 1rem);
+  width: -moz-calc(100% + 0.8rem);
 }
 
 
