--- a/apps/communications/contacts/style/search.css
+++ b/apps/communications/contacts/style/search.css
@@ -1,4 +1,8 @@
 /* Search */
+#groups-list {
+  padding-top: 2.5rem;
+}
+
 /* Common search styles */
 form.search {
   position: absolute;
@@ -102,6 +106,7 @@ form.search button[type="submit"] {
 #groups-list-search {
   position: relative;
   text-align: left;
+  padding: 0 1.5rem;
   overflow: auto;
   z-index: 1;
 }
@@ -114,10 +119,6 @@ form.search button[type="submit"] {
 
 #search-list {
   height: 100%;
-}
-
-#search-list[data-type="list"] li:after {
-  right: -1.5rem;
 }
 
 #search-list > li[data-uuid] > a *,
