Bug 805133 - [Calendar] Follow-up keep calendar tab shadow

--- a/apps/calendar/style/ui.css
+++ b/apps/calendar/style/ui.css
@@ -476,6 +476,10 @@ body[data-path="/day/"] #view-selector > .day > a {
   font-weight: 500;
 }
 
+#view-selector {
+  bottom: auto;
+}
+
 #view-selector > li > a {
   outline: none;
 }
