--- a/shared/style/action_menu.css
+++ b/shared/style/action_menu.css
@@ -5,9 +5,8 @@
 /* Main dialog setup */
 form[role="dialog"][data-type="action"],
 form[role="dialog"][data-type="object"] {
-  background:
-    url(action_menu/images/ui/pattern.png) repeat left top,
-    url(action_menu/images/ui/gradient.png) no-repeat left top / 100% 100%;
+  background: url(confirm/images/ui/pattern.png) repeat left top,
+    -moz-radial-gradient( 50% 0%, circle farthest-corner, rgba(59,59,59,0.9) 0%, rgba(59,59,59,1) 66%);
   overflow: hidden;
   position: fixed;
   z-index: 100;
