--- a/shared/style_unstable/time_selector.css
+++ b/shared/style_unstable/time_selector.css
@@ -4,7 +4,8 @@
 
 /* Main dialog setup */
 [role="dialog"][data-type="time-selector"] {
-  background: url(time_selector/images/ui/pattern.png) repeat left top, url(time_selector/images/ui/gradient.png) no-repeat left top / 100% 100%;
+  background: url(confirm/images/ui/pattern.png) repeat left top,
+    -moz-radial-gradient( 50% 0%, circle farthest-corner, rgba(59,59,59,0.9) 0%, rgba(59,59,59,1) 66%);
   overflow: hidden;
   position: absolute;
   z-index: 100;
