Bug 946113 - [Settings - Do not track] Update margins and list height

--- a/apps/settings/style/lists.css
+++ b/apps/settings/style/lists.css
@@ -157,7 +157,7 @@ ul li > label.pack-switch > input ~ span:after {
 }
 
 ul li > label.pack-checkbox > span {
-  padding-right: 6.1rem;
+  padding-right: 4.5rem;
 }
 
 ul li > label.pack-radio ~ p {
@@ -169,7 +169,7 @@ ul li > label.pack-switch > span {
 }
 
 ul li > label.pack-radio > span {
-  padding-right: 5.9rem;
+  padding-right: 4.5rem;
 }
 
 ul li > label.pack-checkbox:active > span,
@@ -177,6 +177,21 @@ ul li > label.pack-radio:active > span,
 ul li > label.pack-switch:active > span {
   background-color: #b2f2ff;
   color: #222;
+}
+
+ul li > label.description {
+  padding: 0;
+}
+
+ul li > label.description span {
+  height: auto;
+  min-height: 6rem;
+  padding-top: 1.2rem;
+  padding-bottom: 1.2rem;
+  font-size: 1.7rem;
+  line-height: 2.3rem;
+  white-space: normal;
+  vertical-align: middle;
 }
 
 /******************************************************************************
