Bug 948396 - [Calendar] Can not scroll anymore the week/day view once the new event has been opened with APZ turned on. r=kgrandon

--- a/apps/calendar/style/ui.css
+++ b/apps/calendar/style/ui.css
@@ -41,6 +41,14 @@ ol.link-list li:only-child a {
 
 /* view management */
 
+#modify-event-view {
+  display: none;
+}
+
+#modify-event-view.active {
+  display: block;
+}
+
 #time-views {
   display: flex;
   flex-direction: column;
