--- a/apps/gallery/style/gallery.css
+++ b/apps/gallery/style/gallery.css
@@ -69,7 +69,8 @@ body.cropView #crop-view {
  * the issue.  The user can't interact with the app while the overlay
  * is displayed.
  */
-#overlay {
+#overlay,
+#confirm-dialog {
   /* it takes up the whole screen */
   position: absolute;
   top: 0;
