--- a/apps/sms/style/sms.css
+++ b/apps/sms/style/sms.css
@@ -267,12 +267,11 @@ form[data-type="action"] img[src=""] {
   display: none;
 }
 
-#new-message-notice-content {
+#messages-new-message-notice {
   display: flex;  
   flex-direction: row;
 
-  margin: 1rem 2rem;
-  padding: 0;
+  padding: 1rem 1.5rem 1rem 2rem;
   overflow: hidden;
 
   white-space: nowrap;
@@ -281,26 +280,29 @@ form[data-type="action"] img[src=""] {
   text-align: left;
 }
 
-#new-message-notice-content a {
+#messages-new-message-notice a {
   margin: 0;
 }
 
-#new-message-notice-contact {
+#messages-new-message-notice .contact {
   overflow: hidden;
 
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
-#new-message-notice-container-1 {
+#messages-new-message-notice > div:first-child {
   flex: auto;
+
+  overflow: hidden;
 }
 
-#new-message-notice-container-2 {
+#messages-new-message-notice > div:nth-child(2) {
   flex: none;
 
-  padding: 0.2rem 0;
+  padding: 0.2rem 0 0.2rem 1.5rem;
 }
+
 /*
   Styles for Edit mode in Thread List
 */
