Bug 951067 - [Video] No spinner when trying to view a video by activities

--- a/apps/video/style/video.css
+++ b/apps/video/style/video.css
@@ -622,7 +622,7 @@ body:not(.pick-activity) #thumbnail-list-view header {
 }
 
 /* spinner is only valid for tablet and landscape mode */
-#spinner-overlay {
+body:not(.view-activity) #spinner-overlay {
   display: none;
 }
 
