Bug 796535 - [l10n] dock icons are misaligned when using Arabic

--- a/apps/homescreen/style/homescreen.css
+++ b/apps/homescreen/style/homescreen.css
@@ -61,7 +61,8 @@ button {
    outline: none;
 }
 
-html[dir=rtl] .apps ol > li {
+html[dir=rtl] .apps ol > li,
+html[dir=rtl] #footer li {
   float: right;
 }
 
