--- a/apps/email/style/common.css
+++ b/apps/email/style/common.css
@@ -259,3 +259,39 @@ section[role="status"][title="undo"] .toaster-banner-undo,
 section[role="status"][title="retry"] .toaster-banner-retry {
   display: inline;
 }
+
+
+/*
+These folder-depth* styles are here instead of folder_cards.css
+because they are also used by the value_selector for showing
+the list of folders. folder-item specific styles so that these
+paddings override other styles in folder_cards.css
+*/
+.fld-folder-item.fld-folder-depth0,
+.fld-folder-depth0 {
+  padding-left: 1.5rem;
+}
+.fld-folder-item.fld-folder-depth1,
+.fld-folder-depth1 {
+  padding-left: 3rem;
+}
+.fld-folder-item.fld-folder-depth2,
+.fld-folder-depth2 {
+  padding-left: 4.5rem;
+}
+.fld-folder-item.fld-folder-depth3,
+.fld-folder-depth3 {
+  padding-left: 6rem;
+}
+.fld-folder-item.fld-folder-depth4,
+.fld-folder-depth4 {
+  padding-left: 6.5rem;
+}
+.fld-folder-item.fld-folder-depth5,
+.fld-folder-depth5 {
+  padding-left: 9.5rem;
+}
+.fld-folder-item.fld-folder-depth6,
+.fld-folder-depthmax {
+  padding-left: 11rem;
+}
