--- a/shared/style/headers.css
+++ b/shared/style/headers.css
@@ -258,7 +258,7 @@ section[role="region"] header h2 {
  * HEADERS: dark
  * ---------------------------------- */
 section[role="region"].skin-dark > header:first-child,
-.skin-dark section[role="region"] > header:first-child {
+.skin-dark > section[role="region"] > header:first-child {
   background-color: #242D33;
 }
 
@@ -285,7 +285,7 @@ section[role="region"].skin-dark > header:first-child menu[type="toolbar"] butto
 }
 
 section[role="region"].skin-dark header h2,
-.skin-dark section[role="region"] header h2 {
+.skin-dark > section[role="region"] header h2 {
   background-color: #2c353b;
   color: #fff;
   border: none;
