Bug 952008 - Remove opacity transition from the app closing animation

--- a/apps/system/style/window.css
+++ b/apps/system/style/window.css
@@ -207,8 +207,8 @@
 }
 
 @keyframes closeApp {
-  0%   { transform: scale(1.0); opacity: 1;}
-  100% { transform: scale(0.01); opacity: 0;}
+  0%   { transform: scale(1.0); }
+  100% { transform: scale(0.01); }
 }
 
 @keyframes closeAppTowardsCardView {
