--- a/apps/calendar/style/building_blocks.css
+++ b/apps/calendar/style/building_blocks.css
@@ -130,3 +130,13 @@ body[role="application"] .fieldbox label:last-child {
   font-family: sans-serif;
 }
 
+/* Remove hover state in drawer button */
+#time-header > a:not([aria-disabled="true"]):hover:after,
+#time-header > button:not(:disabled):hover:after {
+  background: none !important;
+}
+
+#time-header > a:not([aria-disabled="true"]):active:after,
+#time-header > button:not(:disabled):active:after {
+  background-color: #dc6a0e !important;
+}
