--- a/apps/system/style/rocketbar.css
+++ b/apps/system/style/rocketbar.css
@@ -26,7 +26,7 @@
 
 #search-bar #search-input {
   margin-top: 2rem;
-  width: calc(100% - 5.5rem);
+  width: calc(100% - 6.5rem);
   border: 0;
   border-radius: 0;
   line-height: 4rem;
@@ -39,10 +39,18 @@
   color: #929496;
 }
 
+#search-reset.hidden {
+  opacity: 0;
+}
+
+#search-bar #search-reset {
+  margin-right: 6rem;
+}
+
 #search-bar #search-cancel {
   position: absolute;
   right: 0;
-  top: 2.5rem;
+  top: 0.5rem;
   border-left: 1px solid #929496;
   text-decoration: none;
   padding: 0.7rem 0.8rem 0.5rem;
