--- a/apps/system/style/statusbar/statusbar.css
+++ b/apps/system/style/statusbar/statusbar.css
@@ -36,7 +36,8 @@ body, html {
   margin: 0 0.2rem;
 }
 
-#statusbar > .sb-start {
+#statusbar-title,
+body:not(.rb-enabled) #statusbar > .sb-start {
   float: left;
   -moz-transition: visibility 0.5s ease, -moz-transform 0.5s ease;
 }
@@ -63,7 +64,9 @@ body, html {
   right: 0;
 }
 
-.utility-tray #statusbar > .sb-start-upper {
+.utility-tray #statusbar > .sb-start-upper,
+.utility-tray #statusbar > #statusbar-title,
+#statusbar-title.hidden {
   visibility: visible;
   -moz-transform: translateY(2rem);
 }
@@ -80,6 +83,7 @@ body, html {
   bottom: 0.1rem;
 }
 
+#statusbar-title,
 #statusbar-time, #statusbar-data:not(.sb-icon-data-circle) {
   position: relative;
   bottom: 0.1rem;
