--- a/apps/settings/style/settings.css
+++ b/apps/settings/style/settings.css
@@ -45,11 +45,15 @@ section[role="region"] {
   visibility: hidden;
   transform: translateX(+100%);
   transition: transform .4s ease, visibility .4s ease;
+  pointer-events: none;
 }
 section[role="region"].peek {
   visibility: visible;
   transition: transform 1ms linear;
   transform: translateX(+0.1%);
+}
+section[role="region"].transition {
+  pointer-events: none !important;
 }
 
 section[role="region"].previous {
@@ -64,6 +68,7 @@ section[role="region"].previous.peek {
 section[role="region"].current {
   visibility: visible;
   transform: translateX(0);
+  pointer-events: auto;
 }
 section[role="region"].current.peek.forward {
   transform: translateX(99.9%);
